--- a/devops/mongo.html
+++ b/devops/mongo.html
@@ -481,6 +481,10 @@
                     <p>MongoDB es una base de datos NoSQL que no utiliza tablas ni relaciones entre ellas, por lo que no tiene un concepto directo de "JOIN" como en SQL. Sin embargo, MongoDB ofrece una operación similar llamada <code>$lookup</code>, que permite hacer uniones entre colecciones.</p>                
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -501,6 +505,10 @@
                     <p><code>$lookup</code> es el operador que permite realizar una especie de "join" entre colecciones en MongoDB. Si bien no es exactamente igual a un JOIN en SQL, permite combinar datos de diferentes colecciones en una sola consulta de agregación.</p>               
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -527,6 +535,10 @@ $project: { "nombre": 1, "departamento_info.nombre": 1 }
                     <p>MongoDB ofrece varios operadores de agregación como <code>$match</code>, <code>$group</code>, <code>$sort</code>, entre otros, que permiten realizar consultas complejas y manejar grandes volúmenes de datos de manera eficiente.</p>               
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
