--- a/devops/sql.html
+++ b/devops/sql.html
@@ -182,6 +182,10 @@
                     <p>Combina operaciones de INSERT y UPDATE en una sola sentencia. Dependiendo de si los datos ya existen o no, actualiza o inserta nuevos registros.</p>
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -204,6 +208,10 @@ WHEN NOT MATCHED THEN
                     <p>Crea una nueva tabla, vista, índice, o cualquier otro objeto de base de datos.</p>
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -537,6 +545,10 @@ WHEN NOT MATCHED THEN
                     <p>Los joins en SQL son fundamentales para combinar filas de dos o más tablas en función de una relación entre ellas. Este proceso es esencial en bases de datos relacionales, donde los datos están estructurados en múltiples tablas que se pueden relacionar entre sí.</p>
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -551,6 +563,10 @@ JOIN departamentos ON empleados.depto_id = departamentos.id;</code></pre>
                     <p>INNER JOIN es un tipo de unión que combina filas de dos o más tablas basándose en una condición común. Solo devuelve las filas que tienen coincidencias en ambas tablas.</p>
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -565,6 +581,10 @@ INNER JOIN departamentos ON empleados.depto_id = departamentos.id;</code></pre>
                     <p>LEFT JOIN es un tipo de unión que devuelve todas las filas de la tabla de la izquierda y las filas coincidentes de la tabla de la derecha. Si no hay coincidencias, se rellenan las columnas de la tabla de la derecha con NULL.</p>
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -578,6 +598,10 @@ LEFT JOIN departamentos ON empleados.depto_id = departamentos.id;</code></pre>
                     <p>RIGHT JOIN es un tipo de unión que devuelve todas las filas de la tabla de la derecha y las filas coincidentes de la tabla de la izquierda. Si no hay coincidencias, se rellenan las columnas de la tabla de la izquierda con NULL.</p>
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -591,6 +615,10 @@ RIGHT JOIN departamentos ON empleados.depto_id = departamentos.id;</code></pre>
                     <p>FULL JOIN es un tipo de unión que combina el comportamiento de LEFT JOIN y RIGHT JOIN, devolviendo todas las filas de ambas tablas. Si no hay coincidencias, las columnas no coincidentes se rellenan con NULL.</p>
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -608,6 +636,10 @@ FULL JOIN departamentos ON empleados.depto_id = departamentos.id;</code></pre>
                 <p>El formateo de consultas SQL es esencial para mejorar la legibilidad, especialmente en queries muy largas o complejas. Utilizar sangrías y saltos de línea ayuda a estructurar mejor la consulta, facilitando la identificación de sus diferentes partes, como las cláusulas SELECT, FROM, WHERE, y los JOIN. Al hacerlo, los desarrolladores pueden comprender más fácilmente la lógica de la consulta y realizar modificaciones sin confusiones. Una práctica común es alinear las cláusulas principales y anidar condiciones en subconsultas o expresiones de forma ordenada. Por ejemplo, una consulta compleja se puede formatear así:</p>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
