--- a/hacking/firewall.html
+++ b/hacking/firewall.html
@@ -85,6 +85,10 @@
                     <h4>Ejemplo de dirección IP estática:</h4>
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -109,6 +113,10 @@ end</code></pre>
                     <h4>Ejemplo de creación de servicio personalizado:</h4>
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -128,6 +136,10 @@ end</code></pre>
                     <h4>Ejemplo de configuración de un VIP:</h4>
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -149,6 +161,10 @@ end</code></pre>
                 <h4>Configuración de la interfaz de red</h4>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -163,6 +179,10 @@ end                           # Aplica y guarda los cambios.</code></pre>
                 <h4>Activar y configurar el servidor DHCP en una interfaz</h4>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -182,6 +202,10 @@ end</code></pre>
                 <h4>Configurar VLANs</h4>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -199,6 +223,10 @@ end</code></pre>
                 <h4>Configurar rutas estáticas</h4>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -214,6 +242,10 @@ end</code></pre>
                 <h4>Configuración de políticas de firewall</h4>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -234,6 +266,10 @@ end                             # Aplica y guarda los cambios.</code></pre>
                 <h4>Configuración de una VPN IPsec</h4>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
